k3s-manifests/03-network/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-product-prefix
spec:
  stripPrefix:
    prefixes:
      - /product
